[package]
edition = "2021"
name = "dynamic-cast"
version = "0.1.3"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "The fifth pillar of OOP: dynamic casting."
readme = "README.md"
documentation = "https://docs.rs/dynamic-cast/"
keywords = ["oop", "dynamic", "cast", "trait", "interface"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dynamic-cast"

[dependencies]
arraybox = "0.1.0"
downcast-rs = { version = "1.2.0", default-features = false }

[dev-dependencies]
portrait = { git = "https://github.com/SOF3/portrait.git" }
