[package]
edition = "2021"
name = "ensure_no_std"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
dynamic-cast = { path = ".." }
composable-allocators = "0.3.4"
exit-no-std = "0.2.1"
portrait = { git = "https://github.com/SOF3/portrait.git" }
